Used to test if client is on mobile

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <a href="http://spencerbriere.ca/project.html">Link to Info Vis project</a>
+<a href="http://spencerbriere.ca/test/index.hmtl">Testing browser specific redirects</a>
 </body>
 </html>
