Renamed /test/index.html to /redirect.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <a href="http://spencerbriere.ca/project.html">Link to Info Vis project</a>
-<a href="http://spencerbriere.ca/test/index.html">Testing browser specific redirects</a>
+<a href="http://spencerbriere.ca/redirect.html">Testing browser specific redirects</a>
 </body>
 </html>
