--- a/redirect.html
+++ b/redirect.html
@@ -27,7 +27,7 @@
 		};
 	if( isMobile.any() ) { 
 		alert('Mobile');
-		window.location = "http://www.youtube.m";
+		window.location = "http://m.youtube.com";
 	} else {
 		alert('Desktop');
 		window.location = "http://www.youtube.com";
