included first experimental homepage

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -5,5 +5,7 @@
 <p>I'm hosted with GitHub Pages.</p>
 <p>DESKTOP</p>
 <a href="http://spencerbriere.ca/projects/">Link to Info Vis project</a>
+<p></p>
+<a href="http://spencerbriere.ca/experiment/">Experimental Homepage</a>
 </body>
 </html>
