--- a/mobile/index.html
+++ b/mobile/index.html
@@ -3,7 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<p>Mobile</p>
+<p>MOBILE</p>
 <a href="http://spencerbriere.ca/projects/">Link to Info Vis project</a>
+<a href="http://spencerbriere.ca/experiment/">Experimental Homepage</a>
 </body>
 </html>
