--- a/experiment/index.html
+++ b/experiment/index.html
@@ -8,7 +8,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>OWL Flat One Page Creative Portfolio Template</title>
+	<title>Spencer Briere</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -33,7 +33,6 @@
 	<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="javascripts/responsivemobilemenu.js"></script>
 	<script type="text/javascript" src="javascripts/jquery.flexslider.js"></script>
-	<script type="text/javascript" src="javascripts/jquery.testemonialslider.js"></script>
 	<script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="javascripts/jquery.prettyPhoto.js"></script>
 	<script type="text/javascript" src="javascripts/jquery.quicksand.js"></script> 
@@ -53,16 +52,6 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 	
-	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-46811000-1', 'fabianbentz.de');
-  ga('send', 'pageview');
-
-</script>
 
 </head>
 <body>
