Added appropriate scrolling headers

--- a/experiment/index.html
+++ b/experiment/index.html
@@ -64,7 +64,7 @@
 <header>
 <div class="container nav" id="home">
       <div class="three columns logo center">
-      <img src="./images/logo.svg" height="120px" width="120px" alt"">
+      <img src="./images/logo.png" height="120px" width="120px" alt"">
       </div>
       <div class="thirteen columns navigation">
         <nav>
@@ -74,7 +74,7 @@
                 <li><a href='#aboutme'>ABOUT ME</a></li>
                 <li><a href='#skills'>SKILLS</a></li>
                 <li><a href='#portfolio'>PORTFOLIO</a></li>
-                <li><a href='#service'>Experience</a></li>
+                <li><a href='#service'>EXPERIENCE</a></li>
                 <li><a href='#contact'>CONTACT</a></li> 
             </ul>
           </div>
@@ -92,30 +92,33 @@
       <ul class="slides">
           <li>
             <div class="sixteen columns slide1">
-              <p class="center"><img class="scale-with-grid" src="images/logo.svg" height="500px" width="500px" alt="logo big"></p>
-              <h1 class="white">OWL FLAT ONE PAGE PORTFOLIO</h1>
-              <h3 class="white"><span>RESPONSIVE WEBSITE TEMPLATE</span></h3>
+              <p class="center"><img class="scale-with-grid" src="images/logo-big.png" height="500px" width="500px" alt="logo big"></p>
+              <h1 class="white">University of Calgary Student</h1>
+              <h3 class="white"><span>Senior Year of Computer Science</span></h3>
              </div>
           </li>
          <li>
             <div class="sixteen columns slide2">
-              <p class="center"><img class="scale-with-grid" src="images/flexslider/image1.png" alt="logo big"></p>
-              <h3 class="white">OPTIMIZED FOR MOBIL DEVICES</h3>
+              <p class="center"><img class="scale-with-grid" src="images/flexslider/adaptability.png" alt="logo big"></p>
+              <h3 class="white">Highly Adaptable</h3>
+              <h3 class="white"><span>Able To Tackle Problems From Many Different<br>Angles And Open To Suggestions</span></h3>
             </div>
             </li>
           <li>
             <div class="sixteen columns slide3">
-              <p class="center"><img class="scale-with-grid" src="images/flexslider/image1.png" alt="logo big"></p>
-              <h3 class="white">YOU CAN ADD IMAGES AND TEXT TO SLIDER</h3>
+              <p class="center"><img class="scale-with-grid" src="images/flexslider/hardworking.png" alt="logo big"></p>
+              <h3 class="white">Hardworking</h3>
+              <h3 class="white"><span>Able To Handle High Stress And Long Hours</span></h3>
             </div>
             </li>
             <li>
             <div class="sixteen columns slide4">
-              <p class="center"><img class="scale-with-grid" src="images/flexslider/image1.png" alt="logo big"></p>
-              <h3 class="white"><span>MODERN FLAT ICONS</span></h3>
+              <p class="center"><img class="scale-with-grid" src="images/flexslider/calm.png" alt="logo big"></p>
+              <h3 class="white"><span>Calm and Optimistic</span></h3>
+              <h3 class="white"><span>Can Keep Calm And Focused Even When<br>Looking For The Most Subtle Bugs</span></h3>
              </div>
             </li>
-            <li>
+          <!--  <li>
             <div class="sixteen columns slide5">
               <p class="center"><img class="scale-with-grid" src="images/flexslider/image1.png" alt="logo big"></p>
               <h3 class="white"><span>RESPONSIVE PRICE TABLES</span></h3>
@@ -126,7 +129,7 @@
               <p class="center"><img class="scale-with-grid" src="images/flexslider/image1.png" alt="logo big"></p>
               <h3 class="white"><span>SKILL BARS</span></h3>
              </div>
-            </li> 
+            </li> -->
        </ul>
      </div>
    </div>
@@ -145,7 +148,7 @@
          <div class="center">
          <img id="zoom" class="center scale-with-grid" src="./images/profile/profile.jpg">
          <h4>Spencer Briere</h4>
-         <h6>Senior Year Computer Science Student</h6>
+         <h6>Senior Year Computer Science Student<br>Minor in Philosophy</h6>
          <p class="center">Studying at the University of Calgary<br>Graduating April 2017</p>
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/facebook.svg" alt=""></a>
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/google.svg" alt=""></a>
