--- a/experiment/index.html
+++ b/experiment/index.html
@@ -327,13 +327,10 @@
        
        <div class="one-third column omega coninfo">
          <h4 class="left white">Contact Informations</h4>
-         <p class="white">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod erat.</p>
+         <p class="white">Email me anytime.<br>I will respond within two workdays.</p>
          <ul>
-          <li>Flat OWL One Page Template</li>
-          <li>Lorum Ipsum Street 19</li>
-          <li>61234 Lorum City</li>
-          <li>+49 xxxx 123456789</li>
-          <li><a href="mailto:">info@lorumipsum.com</a></li>
+          <li>Calgary, Alberta</li>
+          <li><a href="mailto:">spencerbriere@gmail.com</a></li>
          </ul>
          <h4 class="left white">Follow Us</h4>
          <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/facebook.svg" alt=""></a>
