Added preview of Steam Vis

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
        <!--  <p class="white center">Subheader about my experience</p> -->
          
          <div class="four columns alpha">
-         <img class="center circle scale-with-grid" id="zoom" src="./images/icons/flatdesign.svg">
+         <img class="center circle scale-with-grid" id="zoom" src="./images/portfolio/steam.png">
          <h4 class="h4">Steam Game Library Visualisation</h4>
          <p class="center h4">Displays the relationship between game tags. Furthermore displays heatmaps of both score and number of owners</p>
          </br>
