--- a/index.html
+++ b/index.html
@@ -315,14 +315,14 @@
     </div>
          
        <div class="two-thirds column form">
-                 <form action="#" id="commentForm" method="post" name="commentForm">
+                 <form action="Javascript:send()" id="commentForm" method="post" name="commentForm">
                        <input class="required name" id="name" name="name" type="text" value="Name*" onFocus="if(this.value=='Name*') this.value=''"/>
                        <input class="required email" id="email" name="email" type="text" value="Email*" onFocus="if(this.value=='Email*') this.value=''"/>
                        <input class="phone" id="phone" name="phone" type="text" value="Phone" onFocus="if(this.value=='Phone') this.value=''"/>
                        <input class="website" id="website" name="website" type="text" value="Website" onFocus="if(this.value=='Website') this.value=''"/>
                        <textarea class="required message" name="message" onFocus="if(this.value=='Message*') this.value=''">Message*</textarea>
                        <button class="btn">Send</button>
-                       <p class="white">Required fields are marked *</p>
+                       <p class="white">Required fields are marked *<br>This form is presently under maintenance.</p>
                   </form>
        </div>
        
@@ -371,6 +371,13 @@
         animation: "slide"
       });
 });
+</script>
+
+
+<script type="text/javascript">
+	function send() {
+		alert("Form under maintenance.")
+	}
 </script>
 
 
