--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
          
          <div class="four columns alpha">
          <img class="center circle scale-with-grid" id="zoom" src="./images/portfolio/steam.png">
-         <h4 class="h4">Steam Game Library Visualisation</h4>
+         <h4 class="h4">Steam Game Library Visualization</h4>
          <p class="center h4">Displays the relationship between game tags. Furthermore displays heatmaps of both score and number of owners</p>
          </br>
          <p class="center"><a href="http://www.spencerbriere.ca/projects/steam" target="_blank"  class="btndow">Try Now</a></p>
