Attempted changes for mobile

--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
                   </form>
        </div>
     -->
-		<iframe src="https://docs.google.com/forms/d/16xNdtA0fG3RZSKqaOORq4FtgrxbLPK4HTVSFpiswUDM/viewform?embedded=true" class="two-thirds column" height=600>Loading...</iframe>
+		<iframe src="https://docs.google.com/forms/d/16xNdtA0fG3RZSKqaOORq4FtgrxbLPK4HTVSFpiswUDM/viewform?embedded=true" class="two-thirds column" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 		
-       <div class="one-third column omega coninfo">
+		<div class="one-third column omega coninfo">
          <h4 class="left white">Contact Informations</h4>
          <p class="white">Email me anytime.<br>I will respond within two workdays.</p>
          <ul>
