--- a/index.html
+++ b/index.html
@@ -118,18 +118,6 @@
               <h3 class="white"><span>Can Keep Calm And Focused Even When<br>Looking For The Most Subtle Bugs</span></h3>
              </div>
             </li>
-          <!--  <li>
-            <div class="sixteen columns slide5">
-              <p class="center"><img class="scale-with-grid" src="images/flexslider/image1.png" alt="logo big"></p>
-              <h3 class="white"><span>RESPONSIVE PRICE TABLES</span></h3>
-             </div>
-            </li>
-            <li>
-            <div class="sixteen columns slide6">
-              <p class="center"><img class="scale-with-grid" src="images/flexslider/image1.png" alt="logo big"></p>
-              <h3 class="white"><span>SKILL BARS</span></h3>
-             </div>
-            </li> -->
        </ul>
      </div>
    </div>
@@ -150,12 +138,7 @@
          <h4>Spencer Briere</h4>
          <h6>Senior Year Computer Science Student<br>Minor in Philosophy</h6>
          <p class="center">Studying at the University of Calgary<br>Graduating April 2017</p>
-         <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/facebook.svg" alt=""></a>
-         <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/google.svg" alt=""></a>
-         <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/twitter.svg" alt=""></a>
-         <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/behance.svg" alt=""></a>
-         <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
-         <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/dribbble.svg" alt=""></a>
+         <a class="social" href="https://ca.linkedin.com/in/spencer-briere-66b3a099" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
          </div>
          
          </div>
@@ -309,24 +292,12 @@
    <div class="sixteen columns">
 
         <h2 class="white" >Contact Me</h2>
+		<p class="white center">Form not working on Mobile Devices</p>
          <hr class="white" >
          <!--<p class="center white">Some subheader about contacting me.</p>-->
     
     </div>
-    <!--     
-       <div class="two-thirds column form">
-                 <form action="MAILTO:spencerbriere@gmail" id="commentForm" method="post" name="commentForm">
-                       <input class="required name" id="name" name="name" type="text" value="Name*" onFocus="if(this.value=='Name*') this.value=''"/>
-                       <input class="required email" id="email" name="email" type="text" value="Email*" onFocus="if(this.value=='Email*') this.value=''"/>
-                       <input class="phone" id="phone" name="phone" type="text" value="Phone" onFocus="if(this.value=='Phone') this.value=''"/>
-                       <input class="website" id="website" name="website" type="text" value="Website" onFocus="if(this.value=='Website') this.value=''"/>
-                       <textarea class="required message" name="message" onFocus="if(this.value=='Message*') this.value=''">Message*</textarea>
-                       <button type = "submit" class="btn">Send</button>
-                       <p class="white">Required fields are marked *<br>This form is presently under maintenance.</p>
-                  </form>
-       </div>
-    -->
-		<iframe src="https://docs.google.com/forms/d/16xNdtA0fG3RZSKqaOORq4FtgrxbLPK4HTVSFpiswUDM/viewform?embedded=true" width="400" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+		<iframe class="two-thirds column" src="https://docs.google.com/forms/d/16xNdtA0fG3RZSKqaOORq4FtgrxbLPK4HTVSFpiswUDM/viewform?embedded=true" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 		
 		<div class="one-third column omega coninfo">
          <h4 class="left white">Contact Informations</h4>
@@ -335,13 +306,8 @@
           <li>Calgary, Alberta</li>
           <li><a href="mailto:">spencerbriere@gmail.com</a></li>
          </ul>
-         <h4 class="left white">Follow Me</h4>
-         <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/facebook.svg" alt=""></a>
-         <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/google.svg" alt=""></a>
-         <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/twitter.svg" alt=""></a>
-         <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/behance.svg" alt=""></a>
-         <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
-         <a class="social" href="" alt=""><img class="scale-with-grid" src="./images/icons/social/dribbble.svg" alt=""></a>
+         <h4 class="left white">LinkedIn</h4>
+         <a class="social" href="https://ca.linkedin.com/in/spencer-briere-66b3a099" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
          </div>
    
    </div>
