Added submit_button element

--- a/services/localStorageConfig.html
+++ b/services/localStorageConfig.html
@@ -6,4 +6,5 @@
   <body>
     <p>This is an example HTML forms configuration page.</p>
   </body>
+  <input id='submit_button' type='button' value='Save'>
 </html>
