--- a/services/localStorageConfig.html
+++ b/services/localStorageConfig.html
@@ -28,6 +28,7 @@
 
   // Add a 'click' listener
   submitButton.addEventListener('click', function() {
+    console.log("Save Button Clicked.");
     // Get the config data from the UI elements
     var backgroundColor = document.getElementById('background_color_input');
     var foregroundColor = document.getElementById('foreground_color_input');
