--- a/services/localStorageConfig.html
+++ b/services/localStorageConfig.html
@@ -44,6 +44,7 @@
     };
     
     var tester = animationsCheckbox.checked == 'true' ? 1 : 0;
+    console.log(animationsCheckbox.checked);
     console.log(tester);
 
     // Determine the correct return URL (emulator vs real watch)
