--- a/services/localStorageConfig.html
+++ b/services/localStorageConfig.html
@@ -39,8 +39,8 @@
     var options = {
       'background_color': parseInt(backgroundColor.value, 16),
       'foreground_color': parseInt(foregroundColor.value, 16),
-      'second_ticks': secondTickCheckbox.checked == 'true' ? 1 : 0,
-      'animations': animationsCheckbox.checked == 'true' ? 1 : 0
+      'second_ticks': secondTickCheckbox.checked == true ? 1 : 0,
+      'animations': animationsCheckbox.checked == true ? 1 : 0
     };
     
     var tester = animationsCheckbox.checked == 'true' ? 1 : 0;
