--- a/services/localStorageConfig.html
+++ b/services/localStorageConfig.html
@@ -43,7 +43,7 @@
       'animations': animationsCheckbox.checked == true ? 1 : 0
     };
     
-    var tester = animationsCheckbox.checked == 'true' ? 1 : 0;
+    var tester = animationsCheckbox.checked == true ? 1 : 0;
     console.log(animationsCheckbox.checked);
     console.log(tester);
 
