Added entry for C#

--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
 	            <h4>Prolog</h4>
 	            <li><span class="skillbar prolog"></span></li>
 	            <h4>C++</h4>
+	            <li><span class="skillbar cs"></span></li>
+	            <h4>C#</h4>
 	            <li><span class="skillbar cpp"></span></li>
 	            <h4>PHP</h4>
 	            <li><span class="skillbar php"></span></li>
