--- a/index.html
+++ b/index.html
@@ -159,27 +159,27 @@
 		 
          <!-- Specific values can be found in stylesheets/layout.css -->
          <ul id="skillbar">
-			    <h4>JAVA</h4>
+		<h4>JAVA</h4>
 	            <li><span class="skillbar java"></span></li>
-	            <h4>HASKELL</h4>
+	        <h4>Haskell</h4>
 	            <li><span class="skillbar haskell"></span></li>
-	            <h4>Prolog</h4>
+	        <h4>Prolog</h4>
 	            <li><span class="skillbar prolog"></span></li>
-	            <h4>C++</h4>
-	            <li><span class="skillbar cs"></span></li>
-	            <h4>C#</h4>
+	        <h4>C++</h4>
 	            <li><span class="skillbar cpp"></span></li>
-	            <h4>PHP</h4>
+	        <h4>C#</h4>
+	            <li><span class="skillbar cs"></span></li>
+	        <h4>PHP</h4>
 	            <li><span class="skillbar php"></span></li>
-				<h4>SQL</h4>
+		<h4>SQL</h4>
 	            <li><span class="skillbar sql"></span></li>
-				<h4>HTML</h4>
+		<h4>HTML</h4>
 	            <li><span class="skillbar html"></span></li>
-				<h4>JAVASCRIPT</h4>
+		<h4>JAVASCRIPT</h4>
 	            <li><span class="skillbar javascript"></span></li>
-				<h4>BASH</h4>
+		<h4>BASH</h4>
 	            <li><span class="skillbar bash"></span></li>
-				<h4>PYTHON</h4>
+		<h4>PYTHON</h4>
 	            <li><span class="skillbar python"></span></li>
             </ul>
          
