--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 header("HTTP/1.1 503 Service Temporarily Unavailable");
 header("Status: 503 Service Temporarily Unavailable");
 header("Retry-After: 3600");
-?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"<a href="http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd</a>">
-<html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml">
+?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>503 - Site upgrade in progress</title>
+<title>418 - I'm A Teapot</title>
 <meta name="robots" content="none" />
 </head>
 <body>
-<h1>503 - Site Upgrade in Progress</h1>
-<p>The <strong><?php echo $_SERVER["SERVER_NAME"]; ?></strong> website is currently being upgraded and is temporarily not available.</p>
-<p>It should be back up and running very soon. Please refresh this page in a few minutes.</p>
+<h1>418 - I'm A Teapot</h1>
+<p>The <strong><?php echo $_SERVER["SERVER_NAME"]; ?></strong> website is currently down. Will return to working order once I find some additional purpose for it.</p>
+<p>It likely won't be back for a while.</p>
 </body>
 </html>
 
