Updated status at university

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
          <div class="center">
          <img id="zoom" class="center scale-with-grid" src="./images/profile/profile.jpg">
          <h4>Spencer Briere</h4>
-         <h6>Senior Year Computer Science Student<br>Minor in Philosophy</h6>
-         <p class="center">Studying at the University of Calgary<br>Graduating April 2017</p>
+         <h6>Computer Science Graduate<br>Minored in Philosophy</h6>
+         <p class="center">Studied at the University of Calgary<br>Graduated April 2017</p>
          <a class="social" href="https://ca.linkedin.com/in/spencer-briere-66b3a099" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
          </div>
          
@@ -181,6 +181,8 @@
 	            <li><span class="skillbar bash"></span></li>
 		<h4>PYTHON</h4>
 	            <li><span class="skillbar python"></span></li>
+		<h4>Swift</h4>
+	            <li><span class="skillbar swift"></span></li>
             </ul>
          
          </div>
