Removed Google Form

--- a/index.html
+++ b/index.html
@@ -295,18 +295,17 @@
          <!--<p class="center white">Some subheader about contacting me.</p>-->
     
     </div>
-		<iframe class="two-thirds column" src="https://docs.google.com/forms/d/16xNdtA0fG3RZSKqaOORq4FtgrxbLPK4HTVSFpiswUDM/viewform?embedded=true" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 		
-		<div class="one-third column omega coninfo">
+	<div class="one-third column omega coninfo">
          <h4 class="left white">Contact Informations</h4>
-         <p class="white">Email me anytime.<br>I will respond within two workdays.</p>
+         <p class="white">Email me anytime.</p>
          <ul>
           <li>Calgary, Alberta</li>
           <li><a href="mailto:">spencerbriere@gmail.com</a></li>
          </ul>
          <h4 class="left white">LinkedIn</h4>
          <a class="social" href="https://ca.linkedin.com/in/spencer-briere-66b3a099" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
-         </div>
+        </div>
    
    </div>
 </div>
