changed contactform class to center

--- a/index.html
+++ b/index.html
@@ -284,29 +284,23 @@
 
 
 <div id="contactform">
-
-<div class="container">
-
-   <div class="sixteen columns">
-
-        <h2 class="white" >Contact Me</h2>
-		<p class="white center">Form not working on Mobile Devices</p>
+   <div class="center">
+      <div class="sixteen columns">
+         <h2 class="white" >Contact Me</h2>
+         <p class="white center">Form not working on Mobile Devices</p>
          <hr class="white" >
          <!--<p class="center white">Some subheader about contacting me.</p>-->
-    
-    </div>
-		
-	<div class="one-third column omega coninfo">
+      </div>
+      <div class="one-third column omega coninfo">
          <h4 class="left white">Contact Informations</h4>
          <p class="white">Email me anytime.</p>
          <ul>
-          <li>Calgary, Alberta</li>
-          <li><a href="mailto:">spencerbriere@gmail.com</a></li>
+            <li>Calgary, Alberta</li>
+            <li><a href="mailto:">spencerbriere@gmail.com</a></li>
          </ul>
          <h4 class="left white">LinkedIn</h4>
          <a class="social" href="https://ca.linkedin.com/in/spencer-briere-66b3a099" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
-        </div>
-   
+      </div>
    </div>
 </div>
 
