Added client management to portfolio

--- a/index.html
+++ b/index.html
@@ -251,15 +251,15 @@
          </br>
          <p class="center"><a href="http://www.spencerbriere.ca/projects/steam" target="_blank"  class="btndow">Try Now</a></p>
          </div>
-         <!--
-         <div class="four columns alpha">
-         <img class="center circle scale-with-grid" id="zoom" src="./images/icons/customizable.svg">
-         <h4 class="h4">Easy Customizable</h4>
-         <p class="center h4">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
-         </br>
-         <p class="center"><a href="http://www.fabianbentz.de/demo/owl/owl-theme.zip" target="_blank"  class="btndow">Download Theme</a></p>
-         </div>
          
+         <div class="four columns alpha">
+         <img class="center circle scale-with-grid" id="zoom" src="./images/portfolio/invoice.png">
+         <h4 class="h4">Client Management And Invoices</h4>
+         <p class="center h4">A work-in-progress web tool to sort expenses accross clients.</p>
+         </br>
+         <p class="center"><a href="work.spencerbriere.ca" target="_blank"  class="btndow">Try Now</a></p>
+         </div>
+         <!--
          <div class="four columns alpha">
          <img class="center circle scale-with-grid" id="zoom" src="./images/icons/portfolio.svg">
          <h4 class="h4">Porfolio</h4>
@@ -290,24 +290,17 @@
    <div class="sixteen columns">
 
         <h2 class="white" >Contact Me</h2>
-		<p class="white center">Form not working on Mobile Devices</p>
          <hr class="white" >
          <!--<p class="center white">Some subheader about contacting me.</p>-->
     
-    </div>
-		<iframe class="two-thirds column" src="https://docs.google.com/forms/d/16xNdtA0fG3RZSKqaOORq4FtgrxbLPK4HTVSFpiswUDM/viewform?embedded=true" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-		
-		<div class="one-third column omega coninfo">
-         <h4 class="left white">Contact Informations</h4>
-         <p class="white">Email me anytime.<br>I will respond within two workdays.</p>
-         <ul>
-          <li>Calgary, Alberta</li>
-          <li><a href="mailto:">spencerbriere@gmail.com</a></li>
-         </ul>
-         <h4 class="left white">LinkedIn</h4>
+    </div>		
+   <div class="center">
+		 <h4 class="white">E-Mail</h4>
+         <a href="mailto:">spencerbriere@gmail.com</a>
+         <h4 class="white">LinkedIn</h4>
          <a class="social" href="https://ca.linkedin.com/in/spencer-briere-66b3a099" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
-         </div>
    
+   </div>
    </div>
 </div>
 
