Added contact options under 'about me'

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
          <h6>Computer Science Graduate<br>Minored in Philosophy</h6>
          <p class="center">Studied at the University of Calgary<br>Graduated April 2017</p>
          <a class="social" href="https://ca.linkedin.com/in/spencer-briere-66b3a099" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
+         <a class="social" href="mailto:spencerbriere@gmail.com" alt=""><img class="scale-with-grid" src="./images/icons/mail.svg" alt=""></a>
+         <a class="social" href="https://github.com/innuiyasha" alt=""><img class="scale-with-grid" src="./images/icons/github.svg" alt=""></a>
          </div>
          
          </div>
