Added missing period to portfolio description

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
          <div class="four columns alpha">
          <img class="center circle scale-with-grid" id="zoom" src="./images/portfolio/steam.png">
          <h4 class="h4">Steam Game Library Visualization</h4>
-         <p class="center h4">Displays the relationship between game tags. Furthermore displays heatmaps of both score and number of owners</p>
+         <p class="center h4">Displays the relationship between game tags. Furthermore displays heatmaps of both score and number of owners.</p>
          </br>
          <p class="center"><a href="https://www.spencerbriere.ca/projects/steam" target="_blank"  class="btndow">Try Now</a></p>
          </div>
