--- a/index.html
+++ b/index.html
@@ -122,14 +122,10 @@
     
     </div>		
    <div class="left">
-	<p>Throughout my degree in Computer Science I experienced many situations where learning quickly gave me the advantage. This includes learning enough C++ to create modifications to a Linux kernel without being formally taught any C++, as well as using Javascript to visualise an enormous amount of data, only being shown how to load in D3.js. Though of course, the courses I enjoyed the most were those which didn’t have me rushing to learn a language.<br><br>
-
-	In my degree I had an interest in Human-Computer Interaction. I’ve worked in both individual and team environments. In which, I created an exploratory visualisation of the connections between ‘tags’ on the Steam video game market using the D3.js framework, and a tablet-based restaurant ordering system making use of AWS as a backend. On my own time I spend countless hours working in Linux to create my own home theater PCs and Servers. Both of which I keep others in mind to ensure that they can also access the services my home can provide. I am also presently developing a web application for my father to make use of in his immigration firm.<br><br>
-
-	There are few semesters that stand out to me more than Summer 2015. In this term my team and I developed a rough version of Pac Man written entirely in Assembly on the Raspberry Pi. I foolishly took two other courses at the same time which is equivalent to 6 courses in a normal term. I tasked myself with getting the SNES driver fully functional as soon as possible, but due to my tight schedule the best approach was to work overnight. I stayed at the lab and worked, fully intent and spending the night. I finished the drivers at about 4AM and went straight home. The driver worked flawlessly and eased work on my entire team.<br><br>
-
-	In my final year I worked in a team of 4 to create a prototype iOS app for the Alberta Bone and Joint Health Institute. We of course used Swift in XCode for development, Git as version control, ResearchKit for data collection and visualisation, and we adopted an Agile Development Strategy. We had weekly in-person meetings with our client Dr. Behnam Sharif to demonstrate what we had done since our last meeting and to discuss additional features or rethink design choices. We each tasked ourselves with a separate portion of the app and quickly created a minimalist prototype, constantly adding features and helping one-another if we encountered troubles. This was the second part of a senior-level course, which none of us had taken the first part of. We had to learn Swift almost entirely on our own while simultaneously trying to impress our client every week. Yet that’s exactly what we did.<br><br>
-</p
+	   <p>As I pursued a Degree in Computer Science from the University of Calgary; I was exposed to a great variety of languages and applications. I have worked on the Linux kernel, written routing algorithms, developed apps, and visualized mass amounts of data.
+              <br><br>In my final year I worked in a small team alongside the Alberta Bone and Joint Health Institute to create a prototype app for the tracking, relieving, and predicting of Knee Osteoarthritis. My team and I had never worked with the new Swift programming language but we worked with the punches and delivered on every weekly meeting. These meetings would provide valuable feedback but occasionally change the direction of the app. This was a wonderful experience working in an Agile environment.
+              <br><br>
+	   </p
    </div>
    </div>
 </div>
