Fixed contact button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <li><a href='#skills'>SKILLS</a></li>
               <!--  <li><a href='#portfolio'>PORTFOLIO</a></li> -->
                 <li><a href='#service'>PORTFOLIO</a></li>
-                <li><a href='#contact'>CONTACT</a></li> 
+                <li><a href='#contactform'>CONTACT</a></li> 
             </ul>
           </div>
         </nav>
